--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Oleksandr Prokopchuk <sasha195@i.ua>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
